force-app/main/default/objects/p2s_base1__EngagioActivity__c/p2s_base1__EngagioActivity__c.object-meta.xml
<CustomObject>
    <label>Engagio Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Engagio Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagio Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>