force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Account_Industry__c</fullName>
    <label>Account Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>