force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>