force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Account_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Account_SFDC_ID__c</fullName>
    <label>Account SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>