force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Activity_ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Activity_ActivityDate__c</fullName>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>