force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Activity_Details__c</fullName>
    <label>Activity Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>