force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Activity_DetailsLong__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Activity_DetailsLong__c</fullName>
    <label>Activity Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>