force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Activity_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Activity_SFDC_ID__c</fullName>
    <description>Pulls from the {Activity}.sfdcId field</description>
    <inlineHelpText>Pulls from the {Activity}.sfdcId field</inlineHelpText>
    <label>Activity SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>