force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Activity_UTMTerm__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Activity_UTMTerm__c</fullName>
    <description>Pulls from the {Activity}.utm_term field</description>
    <inlineHelpText>Pulls from the {Activity}.utm_term field</inlineHelpText>
    <label>Activity UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>