force-app/main/default/objects/p2s_base1__EngagioActivity__c/fields/p2s_base1__Person_LastName__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Person_LastName__c</fullName>
    <label>Person LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>