force-app/main/default/objects/p2s_base1__EngagioActivity__c/listViews/p2s_base1__All.listView-meta.xml
<ListView>
    <fullName>p2s_base1__All</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__Account__c</columns>
    <columns>p2s_base1__Activity_ActivityDate__c</columns>
    <columns>p2s_base1__Activity_ID__c</columns>
    <columns>p2s_base1__Activity_Engagement__c</columns>
    <columns>p2s_base1__Activity_SalesVsMarketing__c</columns>
    <columns>p2s_base1__Person_SFDC_ID__c</columns>
    <columns>p2s_base1__Person_FirstName__c</columns>
    <columns>p2s_base1__Person_LastName__c</columns>
    <columns>p2s_base1__Person_SFDC_Account_ID__c</columns>
    <columns>p2s_base1__Person_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>